# initng

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  Jamfile  Jamrules  Makefile  NEWS  README  TODO  aclocal.m4  add_testpipe.diff  build.sh  config.h.acr  config.h.cmake  config.h.in  config.jam.acr  config.jam.in  configure  configure.ac  configure.acr  initng-paths.h  initng-paths.h.cmake  initng-paths.h.in  initng.pc.acr  libinitng.pc.in
core/: CMakeLists.txt  Doxyfile  Jamfile  TODO  build.sh  config.h.in  core.map
core/active_db/: clean_down.c  compensate_time.c  count.c  find.c  free.c  new.c  percent.c  register.c
core/active_state/: find.c  register.c
core/command/: execute.c
core/common/: state.c
core/config/: global.c  opt.c
core/data/: get_next_var.c  is_var.c  local.h  set_string_var.c
core/debian/: changelog
core/depend/: depend_deep.c  restart_deps.c  start_dep_met.c  start_deps.c  stop_dep_met.c
core/env/: free.c  new.c
core/error/: print.c
core/event/: hook.c  static_types.c
core/execute/: launch.c
core/fd/: close_all.c
core/fork/: aforkhooks.c  fork.c
core/frontend/: main.c  options.c
core/handler/: restart_restarting.c  restart_service.c  run_alarm.c  start_new_service_named.c  start_service.c  stop_all.c  stop_service.c
core/hash/: compute.c  hash.c
core/include/initng/: active_state.h  fork.h  hash.h  toolbox.h
core/interrupt/: check_sys_state.c  dep_failed.c  handle.c  interrupt.c  run_handlers.c
core/io/: closefrom.c  local.h  pipe.c  poll.c  read_input.c
core/kill/: handler.c
core/main/: exit.c  hard.c  ready_to_quit.c  restart.c  segfault.c  set_runlevel.c  set_sys_state.c  start_extra_services.c  su_login.c  when_out.c
core/module/: depend.c  load.c  unload.c
core/module_callers/: new_active.c
core/plugin_callers/: compensate_time.c  new_active.c  signal.c  system_changed.c
core/process_db/: free.c  pipe.c  type.c
core/service/: data_type.c
core/signal/: set.c
core/src/common/: blacklist.c  state.c
core/src/config/: global.c  opt.c
core/src/data/: get_next_string_var.c  set_int_var.c
core/src/depend/: up_check.c
core/src/event/: static_types.c
core/src/fd/: cloexec.c  read_input.c
core/src/fork/: aforkhooks.c  fork.c
core/src/handler/: restart_restarting.c  restart_service.c  run_alarm.c  start_service.c  stop_all.c
core/src/io/: open.c  readwhole.c
core/src/main/: set_runlevel.c  su_login.c
core/src/plugin_callers/: handle_killed.c
core/src/process_db/: find.c  pipe.c
core/src/signal/: handlers.c
core/src/static/: service_types.c
core/src/string/: mprintf.c  split_delim.c
core/src/toolbox/: alloc.c
core/static/: data_id.c  states.c
core/toolbox/: alloc.c
modules/dbus_event/: CMakeLists.txt  Jamfile  MODULE_DESCRIPTION  dbus_nge.c  initng_dbusevent.c
plugins/bash_parser/: CMakeLists.txt  PLUGIN_DESCRIPTION  bp.c  create_links.cmake  create_links.cmake.in  example_script  gentoo_runscript.c  initng_bash_parser.c  initng_bash_parser.h  runiscript.c  runiscript.sh
plugins/service_file/: CMakeLists.txt  PLUGIN_DESCRIPTION  bp.c  create_links.cmake.in  example  gentoo_runscript.c  initng_service_file.c  initng_service_file.h  runiscript.c
plugins/service_file/wrappers/: CMakeLists.txt  compat  compat.in  default  default.in  gentoo.in  runlevel.in
src/core/: CMakeLists.txt  global.c  initng_main.c  initng_parse_args.c  main.c  oldselinux.c  options.c  options.h  parse_args.c  parse_args.h  selinux.h
src/core/config/: options.c  options.h  parse_args.c  parse_args.h
src/launcher/: CMakeLists.txt  main.c  selinux.c  selinux.h
src/libinitng/: CMakeLists.txt  initng_depend.c  initng_env_variable.c  initng_handler.c  initng_kill_handler.c  initng_load_module.c  initng_plugin_callers.c  initng_string_tools.c
src/libinitng/active_db/: alloc.c  clean_down.c  compensate_time.c  count.c  find.c  free.c  new.c  percent.c  register.c  utils.c
src/libinitng/active_state/: find.c  register.c
src/libinitng/command/: execute.c  find.c  register.c
src/libinitng/common/: blacklist.c  state.c
src/libinitng/compat/: asprintf.c
src/libinitng/config/: global.c  opt.c
src/libinitng/control_command/: execute.c  find.c  register.c
src/libinitng/data/: copy_all.c  count_type.c  get_int_var.c  get_next_string_var.c  get_next_var.c  get_string_var.c  is_var.c  local.h  next_var.c  remove.c  remove_all.c  remove_var.c  set_another_string_var.c  set_int_var.c  set_string_var.c  set_var.c
src/libinitng/depend/: any_depends_on.c  dep_on.c  depend.c  depend_deep.c  local.h  restart_deps.c  start_dep_met.c  start_deps.c  stop_dep_met.c  stop_deps.c  up_check.c
src/libinitng/env/: alloc.c  free.c  match.c  new.c
src/libinitng/error/: debug.c  failsafe_print.c  print.c
src/libinitng/event/: hook.c  send.c  static_types.c  type.c
src/libinitng/execute/: launch.c
src/libinitng/fd/: cloexec.c  close_all.c  local.h  pipe.c  poll.c  pool.c  read_input.c
src/libinitng/fork/: aforkhooks.c  fork.c
src/libinitng/handler/: restart_restarting.c  restart_service.c  run_alarm.c  start_new_service_named.c  start_service.c  stop_all.c  stop_service.c
src/libinitng/interrupt/: check_sys_state.c  dep_failed.c  handle.c  interrupt.c  local.h  run_handlers.c
src/libinitng/io/: open_read_close.c
src/libinitng/kill/: handler.c
src/libinitng/main/: exit.c  hard.c  local.h  new_init.c  ready_to_quit.c  restart.c  segfault.c  set_runlevel.c  set_sys_state.c  start_extra_services.c  su_login.c  when_out.c
src/libinitng/module/: depend.c  load.c  local.h  unload.c
src/libinitng/plugin_callers/: active_db.c  compensate_time.c  handle_killed.c  new_active.c  signal.c  system_changed.c
src/libinitng/process_db/: alloc.c  find.c  free.c  new.c  pipe.c  type.c
src/libinitng/service/: data_type.c  type.c
src/libinitng/signal/: handlers.c  local.h  set.c
src/libinitng/static/: data_id.c  service_types.c  states.c
src/libinitng/string/: dup.c  fix_escapes.c  match.c  (+4 more)
src/preinit/: .gitignore  CMakeLists.txt  Jamfile  main.c  oldselinux.c  selinux.c  selinux.h
(+1011 files in other folders)
