ADD_DEFINITIONS(${DBUS_DEFINITIONS})

ADD_EXECUTABLE(dbus_nge dbus_nge.c)
TARGET_LINK_LIBRARIES(dbus_nge ${DBUS_LIBS})
INSTALL_TARGETS(${SBIN_INSTALL_DIR} dbus_nge)

INSTALL_FILES(${SYSCONF_INSTALL_DIR}/dbus-1/system.d initng.conf)

INITNG_MODULE(dbusevent initng_dbusevent.c)
TARGET_LINK_LIBRARIES(dbusevent ${DBUS_LIBS})
INSTALL_TARGETS(${LIB_INSTALL_DIR}/initng dbusevent)
