INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/include ${CMAKE_BINARY_DIR} )
SET(initng_lib_srcs
	active_db/new.c
	active_db/free.c
	active_db/find.c
	active_db/clean_down.c
	active_db/count.c
	active_db/percent.c
	active_db/compensate_time.c
	active_db/register.c
	module/depend.c
	module/load.c
	module/unload.c
	event/hook.c
	event/send.c
	event/type.c
	event/static_types.c
	process_db/new.c
	process_db/free.c
	process_db/find.c
	process_db/pipe.c
	process_db/type.c
	service/data_type.c
	service/type.c
	string/dup.c
	string/mprintf.c
	string/replace.c
	string/fix_escapes.c
	string/match.c
	string/path.c
	string/split_delim.c
	toolbox/alloc.c
	toolbox/set_proc_title.c
	env/new.c
	env/free.c
	env/match.c
	active_state/register.c
	active_state/find.c
	fork/fork.c
	fork/aforkhooks.c
	signal/set.c
	signal/handlers.c
	fd/cloexec.c
	fd/close_all.c
	fd/pipe.c
	fd/poll.c
	fd/read_input.c
	common/blacklist.c
	common/state.c
	error/print.c
	control_command/register.c
	control_command/find.c
	control_command/execute.c
	execute/launch.c
	handler/restart_restarting.c
	handler/start_service.c
	handler/restart_service.c
	handler/stop_all.c
	handler/run_alarm.c
	handler/stop_service.c
	handler/start_new_service_named.c
	depend/any_depends_on.c
	depend/restart_deps.c
	depend/stop_deps.c
	depend/depend.c
	depend/start_dep_met.c
	depend/up_check.c
	depend/depend_deep.c
	depend/start_deps.c
	depend/dep_on.c
	depend/stop_dep_met.c
	interrupt/check_sys_state.c
	interrupt/handle.c
	interrupt/run_handlers.c
	interrupt/dep_failed.c
	interrupt/interrupt.c
	kill/handler.c
	static/data_id.c
	static/service_types.c
	static/states.c
	plugin_callers/active_db.c
	plugin_callers/new_active.c
	plugin_callers/compensate_time.c
	plugin_callers/signal.c
	plugin_callers/handle_killed.c
	plugin_callers/system_changed.c
	io/open_read_close.c
	main/exit.c
	main/restart.c
	main/start_extra_services.c
	main/hard.c
	main/segfault.c
	main/su_login.c
	main/new_init.c
	main/set_runlevel.c
	main/when_out.c
	main/ready_to_quit.c
	main/set_sys_state.c
	data/copy_all.c
	data/set_string_var.c
	data/count_type.c
	data/remove.c
	data/set_var.c
	data/set_another_string_var.c
	data/get_next_var.c
	data/set_int_var.c
	data/get_int_var.c
	data/get_next_string_var.c
	data/get_string_var.c
	data/is_var.c
	config/opt.c
	config/global.c
)

ADD_LIBRARY(initng SHARED ${initng_lib_srcs})
TARGET_LINK_LIBRARIES(initng dl ${COREDUMPER_LIBS} ${SELINUX_LIBS})
SET_TARGET_PROPERTIES(initng PROPERTIES VERSION 0.0.0 SOVERSION 0)
INSTALL_TARGETS(${LIB_INSTALL_DIR} initng)
